# lb

./: .editorconfig  .gitignore  CRUSH.md  README.md  deno.json  index.html  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo  tsconfig.browser.json  tsconfig.build.json  tsconfig.node.json  tsconfig.serviceworker.json  tsconfig.sw.json  tsconfig.web.json  vite.config.ts  vlt.json
dev/: build.js
graveyard/: commands.ts  entry.ts  eruda  importfetch  reflect2  registry.ts  settings.ts  text-editor copy.ts
graveyard/reflection/: reflection.js  stack.js
graveyard/vendornm/: .package-lock.json
littlebook/: .swcrc  build.js  importmap.json  littlebook-env.d.ts  package.json  pnpm-lock.yaml  rolldown.config.ts  rollup.config.ts  tsconfig.build.json  tsconfig.json  tsconfig.sw.json  tsconfig.web.json
littlebook/bookstrap/: bookstrap.ts  index.html  install.ts  service-worker.ts
littlebook/deno/: vendor.ts
littlebook/install/: install.ts
littlebook/machine/: bundleworker.ts  esbuild.ts  machine.ts  mimes.ts  requestish.d.ts  service-worker.ts  serviceworker.ts  setup-service-worker.ts  transformer.ts  typescript-worker.ts
littlebook/system/: entrypoint.ts  importmap.json  littlebook.css  (+2 more)
littlebootstraps/: tauri.d.ts
public/: index.html  littlebook.d.ts  littlebook.js
src/: app.css  dockview.d.ts  index.tsx  theme.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons/archive/: edit.icns  x.icns
src-tauri/src/: lib.rs  main.rs
(+124 files in other folders)
